# Coordinate-Transfirmation-Assignment

./: README.md
plotTrajectory/examples/: CMakeLists.txt  exec_module2_module3.cpp
plotTrajectory/modules/: CMakeLists.txt
plotTrajectory/modules/module2/: CMakeLists.txt
plotTrajectory/modules/module2/include/module2/: ClassEigenMat.hpp
plotTrajectory/modules/module2/src/: ClassEigenMat.cpp
plotTrajectory/modules/module3/: CMakeLists.txt
plotTrajectory/modules/module3/include/module3/: ClassPangolinMat.hpp
plotTrajectory/modules/module3/src/: ClassPangolinMat.cpp
